--- a/index.html
+++ b/index.html
@@ -1,94 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, intitial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Comfy House</title>
-	<!-- font awesome -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-
-	<!-- custom CSS -->
-	<link rel="stylesheet" type="text/css" href="Css/index.css">
-
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="./CSS/main.css">
+     <title>Document</title>
 </head>
 <body>
-	<!-- navbar -->
-	<nav class="navbar">
-		<div class="navbar-center">
-			<span class="nav-icon">
-				<i class="fas fa-bars"></i>
-			</span>
-			<a class="myLogo" href="https://nourjs.000webhostapp.com/">
-				<h2>Nour<span style="color:orange">House</span></h2>
-			</a>
-			<!--<img src="./images/logo.svg" alt="store logo">-->
-			<div class="cart-btn">
-				<span class="nav-icon">
-					<i class="fas fa-cart-plus"></i>
-				</span>
-				<div class="cart-items">0</div>
-			</div>
-		</div>
-	</nav>
-	<!-- end of navbar -->
-
-	<!-- hero -->
-	<header class="hero">
-		<div class="banner">
-			<h1 class="banner-title">Furniture Collection</h1>
-			<a href="#products-head-region" class="banner-btn">Shop Now</a>
-		</div>
-	</header>
-
-	<!-- end of hero -->
-
-	<!-- products -->
-	<section class="products">
-		<div class="section-title">
-			<h2 id="products-head-region">Our Products</h2>
-		</div>
-		<div class="products-center">
-			
-		</div>
-	</section>
-	<!-- cart -->
-	<div class="cart-overlay">
-		<div class="cart">
-			<span class="close-cart">
-				<i class="fas fa-window-close"></i>
-			</span>
-			<h2>Your Cart</h2>
-			<div class="cart-content">
-				<!-- cart item -->
-				<!--<div class="cart-item">
-					
-
-				</div> -->
-				<!-- end of cart item -->
-			</div>
-			<div class="cart-footer">
-				<h3>Your total : $ <span class="cart-total">0.00</span></h3>
-				<button class="checkout checkout-btn">Checkout</button>
-				<button class="clear-cart banner-btn">Clear Cart</button>
-			</div>
-		</div>
-	</div>
-	<!-- end of cart -->
-		
-	<!-- end of products -->
-
-	<!-- CHECKOUT MODAL -->
-	<div class="modal">
-		<span class="close-modal">
-			<i class="fas fa-window-close"></i>
-		</span>
-		<h1>Checking out...</h1>
-		<h5>This is a demo shopping web application.</h5>
-		<h5>Checkout the developer: <a href="https://nourjs.000webhostapp.com/">Nour</a></h5>
-	</div>
-	<!-- END OF CHECKOUT MODAL -->
-
-	<script src="app.js"></script>
+     <section class="wrapper">
+         <div class="container">
+               <div class="screen">
+                    <input type="text">
+               </div>
+               <div class="buttons">
+                    <div class="number">7</div>
+                    <div class="number">8</div>
+                    <div class="number">9</div>
+                    <div class="operation-btn">-</div>
+               </div>
+               <div class="buttons">
+                    <div class="number">4</div>
+                    <div class="number">5</div>
+                    <div class="number">6</div>
+                    <div class="operation-btn">+</div>
+               </div>
+               <div class="buttons">
+                    <div class="number">1</div>
+                    <div class="number">2</div>
+                    <div class="number">3</div>
+                    <div class="operation-btn">/</div>
+               </div>
+               <div class="buttons">
+                    <div class="equal-btn">=</div>
+                    <div class="number">0</div>
+                    <div class="clear-btn">C</div>
+                    <div class="operation-btn">X</div>
+               </div>
+         </div>
+     </section>
+     <script src="./app.js"></script>
 </body>
 </html>
